Assistants swagger + modification DELETE endpoint
